--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+
 dist: trusty
 sudo: false
 os:
@@ -7,5 +8,8 @@ services:
 language: cpp
 compiler: g++
 script: 
-    - g++ -o hello hello.cpp
-    - ./hello
+    - docker run anitagov/ubuntu-tools:1.3
+    - apt-get -y update &&
+    - apt-get -y install linux-generic &&
+    - sudo make -C drivers &&
+    - find drivers -name isgx.ko -print
