--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ language: cpp
 compiler: g++
 script: 
     - docker run anitagov/ubuntu-tools:1.3
-    - apt-get -y update &&
-    - apt-get -y install linux-generic &&
-    - sudo make -C drivers &&
+    - apt-get -y update
+    - apt-get -y install linux-generic
+    - sudo make -C drivers
     - find drivers -name isgx.ko -print
