--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: trusty
+-headersdist: trusty
 sudo: false
 os:
     - linux
@@ -9,6 +9,6 @@ compiler: g++
 script: 
     - docker run anitagov/ubuntu-tools:1.3
     - sudo apt-get -y update
-    - sudo apt-get -y install linux-generic
+    - sudo apt-get -y install linux-headers-$(uname -r)-generic
     - sudo make -C drivers
     - find drivers -name isgx.ko -print
