--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ compiler: g++
 script: 
     - docker run anitagov/ubuntu-tools:1.3
     - sudo apt-get -y update
-    - sudo apt-get -y install linux-headers-$(uname -r)-generic
+    - sudo apt-get -y install linux-headers-$(uname -r)
     - sudo make -C drivers
     - find drivers -name isgx.ko -print
